Bug #2606
Ruby crashes when Logger is used in trap handler
| Status: | Closed | Start date: | 01/15/2010 | |
|---|---|---|---|---|
| Priority: | Normal | Due date: | ||
| Assignee: | - | % Done: | 100% |
|
| Category: | - | |||
| Target version: | - | |||
| ruby -v: | 1.9.2 |
Description
I've run into what I consider to be a strange issue causing the ruby interpreter to crash (on 1.9.1-p0, 1.9.1-p376, and 1.9.2-preview1). Attached is a description and a way to reproduce it. I'm able to reproduce it on linux (64bit) as well as macosx. I suspect it will repro in other places, but haven't confirmed. The repro script is attached.
Associated revisions
* thread.c (rb_thread_blocking_region, rb_thread_blocking_region_end):
preserve errno. [Bug #2606] [ruby-core:28924]
* thread.c (rb_thread_blocking_region, rb_thread_blocking_region_end):
preserve errno. [Bug #2606] [ruby-core:28924]
History
Updated by jgold.bg (Jonathan Gold) over 2 years ago
- File wait2_fail_test.rb added
Update: after trying to build a workaround in my program to just use STDOUT in place of Logger, I've come to find that it's not really the Logger class so much as the Time.strftime function. I've modified the repro script (attached) to demonstrate this.
Updated by yugui (Yuki Sonoda) over 2 years ago
This issue was reported to a wrong project. ---------- Forwarded message ---------- From: Jonathan Gold <redmine@ruby-lang.org> Date: 2010/1/15 Subject: [redmine4ruby-lang:267] [Bug #2606] Ruby crashes when Logger is used in trap handler To: redmine4ruby-lang@qwik.jp Bug #2606: Ruby crashes when Logger is used in trap handler http://redmine.ruby-lang.org/issues/show/2606 起票者: Jonathan Gold ステータス: Open, 優先度: Normal I've run into what I consider to be a strange issue causing the ruby interpreter to crash (on 1.9.1-p0, 1.9.1-p376, and 1.9.2-preview1). Attached is a description and a way to reproduce it. I'm able to reproduce it on linux (64bit) as well as macosx. I suspect it will repro in other places, but haven't confirmed. The repro script is attached. ---------------------------------------- http://redmine.ruby-lang.org -- archive-> http://qwik.jp/redmine4ruby-lang/154.html ML-> redmine4ruby-lang@qwik.jp -- Yuki Sonoda (Yugui) yugui@yugui.jp http://yugui.jp
Updated by nobu (Nobuyoshi Nakada) over 2 years ago
- Status changed from Open to Feedback
- ruby -v set to 1.9.2
I couldn't reproduce it on i386-linux, i386-darwin9.8.0 and x86_64-darwin9.8.0.
Updated by jgold.bg (Jonathan Gold) over 2 years ago
Yuki -- My apologies. Where should I have reported it? Nobuyoshi -- Thank you for trying. I'm disappointed to hear that you couldn't reproduce it. One thing that I could try if you think it'd be helpful is to set up an Amazon EC2 image where it can be made to happen, and then let you bring up that instance to play with. It's a little bit of work for me, but if you have an EC2 account and want to have a place where it can be reproduced I'm willing to try and set it up for you.
Updated by mame (Yusuke Endoh) about 2 years ago
- Status changed from Feedback to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r27401. Jonathan, thank you for reporting this issue. Your contribution to Ruby is greatly appreciated. May Ruby be with you.