* thread.c (rb_thread_blocking_region, rb_thread_blocking_region_end):   preserve errno.  [Bug #2606] [ruby-core:28924]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27401 b2dd03c8-39d4-4d8f-98ff-823fe69b080e